# ml-assignments

./: .gitattributes  README.md  pyproject.toml
z1/: readme.md  regression.ipynb  regression.py  regressor.py
z1/data/: train.json
