[project]
name = "ml-assignments"
version = "2026"
description = "Assignments for the course Machine learning @ FTN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
default-groups = "all"

[dependency-groups]
z1 = [
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
]
