[project]
name = "ml-assignments"
version = "2026"
description = "Assignments for the course Machine learning @ FTN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
default-groups = "all"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
z1 = [
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
]
